[gd_scene load_steps=27 format=3 uid="uid://5jqidrlxo36k"]

[ext_resource type="Script" uid="uid://jdi0p3gfjplc" path="res://Sprites/test.gd" id="1_kw3l4"]
[ext_resource type="TileSet" uid="uid://b0haw5o1uye6x" path="res://Sprites/ILOVEGREENDAY.tres" id="1_m5nnw"]
[ext_resource type="Script" uid="uid://bu487v7gmm71h" path="res://Scripts/noclip.gd" id="2_4550c"]
[ext_resource type="Texture2D" uid="uid://bputqpnxy4uk0" path="res://Sprites/cube.png" id="4_wt8l8"]
[ext_resource type="Script" uid="uid://bl8nn5845tybd" path="res://Scripts/enemy.gd" id="5_m5nnw"]
[ext_resource type="Texture2D" uid="uid://brnh8og4kdhar" path="res://Sprites/Demmy.png" id="6_4550c"]
[ext_resource type="PackedScene" uid="uid://7gkkd0xkvy7" path="res://Scenes/NeonGG.tscn" id="7_0cg7v"]
[ext_resource type="PackedScene" uid="uid://btu8edyvq311s" path="res://Scenes/splat.tscn" id="8_sn6iv"]
[ext_resource type="Texture2D" uid="uid://bgxlrho5c4rd7" path="res://Sprites/Дальше бога нет.png" id="8_wt8l8"]
[ext_resource type="PackedScene" uid="uid://bliviqyh5phgy" path="res://Scenes/ReRodger.tscn" id="9_upyjv"]
[ext_resource type="PackedScene" uid="uid://bgjhe3y7ud0r0" path="res://Scenes/Hack.tscn" id="10_m5nnw"]
[ext_resource type="PackedScene" uid="uid://cfivro2cvucyd" path="res://Scenes/ActualMC.tscn" id="11_m5nnw"]
[ext_resource type="Script" uid="uid://cxc78rqej5vlu" path="res://Scripts/trigger.gd" id="13_kw3l4"]
[ext_resource type="PackedScene" uid="uid://cuhtkraetxw67" path="res://Scenes/TechnoZen.tscn" id="13_t8hlh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wt8l8"]
size = Vector2(6171, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sn6iv"]
size = Vector2(32, 95.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t8hlh"]
size = Vector2(14490.641, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yqe22"]
size = Vector2(12, 50)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_4550c"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6kx34"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_4550c")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_4550c")
}],
"loop": true,
"name": &"BOOM",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_4550c")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4jtfw"]
size = Vector2(431, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0cg7v"]
size = Vector2(14, 51)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_upyjv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m5nnw"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k5l8a"]
size = Vector2(241, 334)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4550c"]
size = Vector2(616, 418)

[node name="Node2D" type="Node2D"]
position = Vector2(1, 0)
script = ExtResource("1_kw3l4")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(313, 228)
collision_layer = 2

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1753.5, -492.5)
shape = SubResource("RectangleShape2D_wt8l8")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(759, 84)
shape = SubResource("RectangleShape2D_sn6iv")

[node name="Area2D" type="Area2D" parent="StaticBody2D"]
position = Vector2(-2324, 290)
script = ExtResource("2_4550c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/Area2D"]
position = Vector2(5658.4844, -0.00079345703)
rotation = -3.14159
scale = Vector2(1.02252, -1)
shape = SubResource("RectangleShape2D_t8hlh")

[node name="enemy" type="CharacterBody2D" parent="." groups=["enemy"]]
position = Vector2(-889, 1)
collision_layer = 4
script = ExtResource("5_m5nnw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy"]
position = Vector2(726, 303)
shape = SubResource("RectangleShape2D_yqe22")
one_way_collision = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="enemy"]
position = Vector2(726, 295)
sprite_frames = SubResource("SpriteFrames_6kx34")
animation = &"BOOM"

[node name="RayCast2D" type="RayCast2D" parent="enemy"]
position = Vector2(727, 279)
target_position = Vector2(139, 0)

[node name="DetectionArea" type="Area2D" parent="enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy/DetectionArea"]
position = Vector2(725.5, 288)
shape = SubResource("RectangleShape2D_4jtfw")

[node name="AttackArea" type="Area2D" parent="enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy/AttackArea"]
position = Vector2(726, 302)
shape = SubResource("RectangleShape2D_0cg7v")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(224, 320)
texture = ExtResource("8_wt8l8")

[node name="RichTextLabel" type="RichTextLabel" parent="Sprite2D"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 2.635
anchor_right = 0.5
anchor_bottom = 2.635
offset_left = -80.0
offset_top = -38.16
offset_right = 73.0
offset_bottom = 1.84
text = "ДАЛЬШЕ БОГА НЕТ"
autowrap_mode = 0
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -936.0
offset_top = 251.0
offset_right = -536.0
offset_bottom = 313.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/table_border = Color(0, 0, 0, 1)
text = "В этот раз Аксо говорить не будет.
Зато у вас есть текст!"
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
offset_left = -245.0
offset_top = 241.0
offset_right = 155.0
offset_bottom = 303.0
text = "Ударь его на ЛКМ"
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
offset_left = 880.0
offset_top = 225.0
offset_right = 1280.0
offset_bottom = 287.0
text = "Это твой первый враг, Роджер"
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
offset_left = 1593.0
offset_top = 224.0
offset_right = 1993.0
offset_bottom = 335.0
text = "ЭТО ЖЕ РОДЖЕРЫ

Кстати, рывок на шифт, можно его удерживать для выбора направления"
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel6" type="RichTextLabel" parent="."]
offset_left = 7971.0
offset_top = 277.0
offset_right = 8371.0
offset_bottom = 388.0
text = "тут ничего нет лол"
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel9" type="RichTextLabel" parent="."]
offset_left = 6115.0
offset_top = 167.0
offset_right = 6515.0
offset_bottom = 278.0
text = "Это ТехноЗен. У него есть три атаки и ОВЕРДРАЙВ.
Он тебя убъет ^^"
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
offset_left = 2724.0
offset_top = 80.0
offset_right = 3124.0
offset_bottom = 191.0
text = "ХЭКИИИИИИ"
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel7" type="RichTextLabel" parent="."]
offset_left = 4020.0
offset_top = 231.0
offset_right = 4420.0
offset_bottom = 342.0
text = "ОВЕРДРАЙВ ускоряет, повышает урон и многое другое. В ОВЕРДРАЙВЕ ты не полчаешь урона, но ЭНЕРГИЯ постепенно падает."
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel8" type="RichTextLabel" parent="."]
offset_left = 5774.0
offset_top = 105.0
offset_right = 6174.0
offset_bottom = 216.0
text = "Это еще не все!"
metadata/_edit_use_anchors_ = true

[node name="Node2D" parent="." instance=ExtResource("7_0cg7v")]
position = Vector2(-793, 225)

[node name="Area2D" type="Area2D" parent="."]
visible = false
position = Vector2(-190, 200)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_upyjv")

[node name="ДальшеБогаНет" type="Sprite2D" parent="Area2D"]
position = Vector2(0, 2)
texture = ExtResource("8_wt8l8")

[node name="Node2D2" parent="Area2D/ДальшеБогаНет" instance=ExtResource("8_sn6iv")]
position = Vector2(0, -2)

[node name="Cube" type="Sprite2D" parent="."]
position = Vector2(1533, 312)
texture = ExtResource("4_wt8l8")

[node name="StaticBody2D" type="StaticBody2D" parent="Cube"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cube/StaticBody2D"]
shape = SubResource("RectangleShape2D_m5nnw")

[node name="Label" type="Label" parent="Cube/StaticBody2D"]
offset_left = -147.0
offset_top = -14.0
offset_right = 13.0
offset_bottom = 9.0
text = "идеальная дырка ™"
metadata/_edit_use_anchors_ = true

[node name="ReRodger3" parent="." instance=ExtResource("9_upyjv")]
position = Vector2(1266, 166)

[node name="ReRodger2" parent="." instance=ExtResource("9_upyjv")]
position = Vector2(2074, 200)

[node name="ReRodger4" parent="." instance=ExtResource("9_upyjv")]
position = Vector2(2077, 238)

[node name="ReRodger" parent="." instance=ExtResource("9_upyjv")]
position = Vector2(2075, 288)

[node name="ReRodger5" parent="." instance=ExtResource("9_upyjv")]
position = Vector2(4112, 104)

[node name="ReRodger6" parent="." instance=ExtResource("9_upyjv")]
position = Vector2(4255, 93)

[node name="ReRodger9" parent="." instance=ExtResource("9_upyjv")]
position = Vector2(6686, 221)

[node name="ReRodger10" parent="." instance=ExtResource("9_upyjv")]
position = Vector2(6813, 159)

[node name="ReRodger11" parent="." instance=ExtResource("9_upyjv")]
position = Vector2(7073, 156)

[node name="ReRodger12" parent="." instance=ExtResource("9_upyjv")]
position = Vector2(7204, 222)

[node name="ReRodger7" parent="." instance=ExtResource("9_upyjv")]
position = Vector2(4325, 130)

[node name="ReRodger8" parent="." instance=ExtResource("9_upyjv")]
position = Vector2(4256, 181)

[node name="ManHack3" parent="." instance=ExtResource("10_m5nnw")]
position = Vector2(2781, 162)

[node name="ManHack" parent="." instance=ExtResource("10_m5nnw")]
position = Vector2(4662, -67)

[node name="ManHack4" parent="." instance=ExtResource("10_m5nnw")]
position = Vector2(6459, -193)

[node name="ManHack5" parent="." instance=ExtResource("10_m5nnw")]
position = Vector2(6455, -62)

[node name="ManHack2" parent="." instance=ExtResource("10_m5nnw")]
position = Vector2(4662, -67)

[node name="UwUGG" parent="." instance=ExtResource("11_m5nnw")]
position = Vector2(-1267, -1)

[node name="TRIGGER2" type="Area2D" parent="."]
position = Vector2(970, 2)
script = ExtResource("13_kw3l4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TRIGGER2"]
position = Vector2(110.5, 157)
shape = SubResource("RectangleShape2D_k5l8a")

[node name="TRIGGER" type="Area2D" parent="."]
script = ExtResource("13_kw3l4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TRIGGER"]
position = Vector2(1082, 160)
shape = SubResource("RectangleShape2D_k5l8a")

[node name="TechnoZen" parent="." instance=ExtResource("13_t8hlh")]
position = Vector2(6944, 234)

[node name="TRIGGER3" type="Area2D" parent="."]
position = Vector2(1602, 4)
script = ExtResource("13_kw3l4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TRIGGER3"]
position = Vector2(110.5, 157)
shape = SubResource("RectangleShape2D_k5l8a")

[node name="TRIGGER4" type="Area2D" parent="."]
position = Vector2(2634, 4)
script = ExtResource("13_kw3l4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TRIGGER4"]
position = Vector2(110.5, 157)
shape = SubResource("RectangleShape2D_k5l8a")

[node name="TRIGGER5" type="Area2D" parent="."]
visible = false
position = Vector2(3882, 49)
script = ExtResource("13_kw3l4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TRIGGER5"]
position = Vector2(327, 71)
shape = SubResource("RectangleShape2D_4550c")

[node name="TRIGGER6" type="Area2D" parent="."]
position = Vector2(5952, 81)
script = ExtResource("13_kw3l4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TRIGGER6"]
position = Vector2(327, 71)
shape = SubResource("RectangleShape2D_4550c")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(320, 231)
tile_set = ExtResource("1_m5nnw")
format = 2
layer_0/tile_data = PackedInt32Array(196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 262143, 0, 0, 262142, 0, 0, 262141, 0, 0, 262140, 0, 0, 262139, 0, 0, 262138, 0, 0, 262137, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 262136, 0, 0, 262135, 0, 0, 262134, 0, 0, 262133, 0, 0, 262132, 0, 0, 262131, 0, 0, 262130, 0, 0, 262129, 0, 0, 262128, 0, 0, 262127, 0, 0, 262126, 0, 0, 262125, 0, 0, 262124, 0, 0, 262123, 0, 0, 262122, 0, 0, 262121, 0, 0, 262120, 0, 0, 262119, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 262102, 0, 0, 262103, 0, 0, 262104, 0, 0, 262105, 0, 0, 262106, 0, 0, 262107, 0, 0, 262108, 0, 0, 262109, 0, 0, 262110, 0, 0, 262111, 0, 0, 262112, 0, 0, 262113, 0, 0, 262114, 0, 0, 262115, 0, 0, 262116, 0, 0, 262117, 0, 0, 262118, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 196641, 0, 0, 196642, 0, 0, 196643, 0, 0, 196644, 0, 0, 196645, 0, 0, 196646, 0, 0, 196647, 0, 0, 196648, 0, 0, 196649, 0, 0, 196650, 0, 0, 196651, 0, 0, 196652, 0, 0, 196653, 0, 0, 196654, 0, 0, 196655, 0, 0, 196656, 0, 0, 196657, 0, 0, 196658, 0, 0, 196660, 0, 0, 196661, 0, 0, 196659, 0, 0, 196662, 0, 0, 196663, 0, 0, 196664, 0, 0, 196665, 0, 0, 196666, 0, 0, 196667, 0, 0, 196668, 0, 0, 196669, 0, 0, 196670, 0, 0, 196671, 0, 0, 196672, 0, 0, 196673, 0, 0, 196674, 0, 0, 196675, 0, 0, 196676, 0, 0, 196677, 0, 0, 196678, 0, 0, 196679, 0, 0, 196681, 0, 0, 196682, 0, 0, 196683, 0, 0, 196684, 0, 0, 196685, 0, 0, 196680, 0, 0, 196686, 0, 0, 196687, 0, 0, 196688, 0, 0, 196689, 0, 0, 196690, 0, 0, 196691, 0, 0, 196692, 0, 0, 196693, 0, 0, 196694, 0, 0, 196695, 0, 0, 196696, 0, 0, 196697, 0, 0, 196698, 0, 0, 196699, 0, 0, 196700, 0, 0, 196701, 0, 0, 196702, 0, 0, 196703, 0, 0, 196704, 0, 0, 196705, 0, 0, 196706, 0, 0, 196707, 0, 0, 196708, 0, 0, 196709, 0, 0, 196710, 0, 0, 196711, 0, 0, 196712, 0, 0, 196713, 0, 0, 196714, 0, 0, 196715, 0, 0, 196716, 0, 0, 196717, 0, 0, 196718, 0, 0, 196719, 0, 0, 196720, 0, 0, 196721, 0, 0, 196722, 0, 0, 196723, 0, 0, 196724, 0, 0, 196725, 0, 0, 196726, 0, 0, 196727, 0, 0, 196728, 0, 0, 196729, 0, 0, 196730, 0, 0, 196731, 0, 0, 196732, 0, 0, 196733, 0, 0, 196734, 0, 0, 196735, 0, 0, 196736, 0, 0, 196737, 0, 0, 196738, 0, 0, 196739, 0, 0, 196740, 0, 0, 196741, 0, 0, 196742, 0, 0, 196743, 0, 0, 196744, 0, 0, 196745, 0, 0, 196746, 0, 0, 196747, 0, 0, 196748, 0, 0, 196749, 0, 0, 196750, 0, 0, 196751, 0, 0, 196752, 0, 0, 196753, 0, 0, 196754, 0, 0, 196755, 0, 0, 196756, 0, 0, 196757, 0, 0, 196758, 0, 0, 262101, 0, 0, 262100, 0, 0, 262099, 0, 0, 262098, 0, 0, 262097, 0, 0, 262096, 0, 0, 262095, 0, 0, 262094, 0, 0, 262087, 0, 0, 262086, 0, 0, 262093, 0, 0, 262092, 0, 0, 262089, 0, 0, 262088, 0, 0, 262090, 0, 0, 262091, 0, 0, 262085, 0, 0, 262084, 0, 0, 262083, 0, 0, 262082, 0, 0, 262081, 0, 0, 262080, 0, 0, 262079, 0, 0, 196759, 0, 0, 196760, 0, 0, 196761, 0, 0, 196762, 0, 0, 196763, 0, 0, 196764, 0, 0, 196765, 0, 0, 196766, 0, 0, 196767, 0, 0, 196768, 0, 0, 196769, 0, 0, 196770, 0, 0, 196771, 0, 0, 196772, 0, 0, 196773, 0, 0, 196774, 0, 0, 196775, 0, 0, 196776, 0, 0, 196777, 0, 0, 196778, 0, 0, 196779, 0, 0, 196780, 0, 0, 196781, 0, 0, 196782, 0, 0, 196783, 0, 0, 196784, 0, 0, 196785, 0, 0, 196786, 0, 0, 196787, 0, 0, 196788, 0, 0, 196789, 0, 0, 196790, 0, 0, 196791, 0, 0, 196792, 0, 0, 196793, 0, 0, 131092, 0, 0, 131095, 0, 0, 65559, 0, 0, 131098, 0, 0, 65562, 0, 0, 26, 0, 0, 131107, 0, 0, 131108, 0, 0, 131106, 0, 0, 131105, 0, 0, 131104, 0, 0, 131103, 0, 0, 131112, 0, 0, 131111, 0, 0, 65576, 0, 0, 65577, 0, 0, 131113, 0, 0, 131114, 0, 0, 65578, 0, 0, 131115, 0, 0, 65579, 0, 0, 43, 0, 0, 65580, 0, 0, 131116, 0, 0, 131117, 0, 0, 131119, 0, 0, 131120, 0, 0, 131121, 0, 0, 131118, 0, 0, 131122, 0, 0, 131123, 0, 0, 62, 0, 0, -65474, 0, 0, -327618, 0, 0, -393154, 0, 0, -458690, 0, 0, -524226, 0, 0, -589762, 0, 0, -655298, 0, 0, -720834, 0, 0, -786370, 0, 0, -851906, 0, 0, -917442, 0, 0, -982978, 0, 0, -1048514, 0, 0, -393150, 0, 0, -458686, 0, 0, -524222, 0, 0, -589758, 0, 0, -655294, 0, 0, -720830, 0, 0, -786366, 0, 0, -851902, 0, 0, -917438, 0, 0, -982974, 0, 0, -1048510, 0, 0, -131006, 0, 0, -65470, 0, 0, 66, 0, 0, -1048506, 0, 0, -982970, 0, 0, -917434, 0, 0, -851898, 0, 0, -786362, 0, 0, -720826, 0, 0, -655290, 0, 0, -589754, 0, 0, -524218, 0, 0, -458682, 0, 0, -393146, 0, 0, -327610, 0, 0, -262074, 0, 0, -262075, 0, 0, -262073, 0, 0, -393151, 0, 0, -393149, 0, 0, -327619, 0, 0, -327617, 0, 0, -65475, 0, 0, -65473, 0, 0, -458679, 0, 0, -458678, 0, 0, -458677, 0, 0, -393142, 0, 0, -327606, 0, 0, -262070, 0, 0, -196534, 0, 0, -130998, 0, 0, -65462, 0, 0, 74, 0, 0, 65567, 0, 0, 131156, 0, 0, 65620, 0, 0, 84, 0, 0, -65452, 0, 0, -130988, 0, 0, -196524, 0, 0, -262060, 0, 0, -327596, 0, 0, -262059, 0, 0, -196522, 0, 0, -196521, 0, 0, -196520, 0, 0, -196519, 0, 0, -262054, 0, 0, -327589, 0, 0, -262053, 0, 0, -196517, 0, 0, -130981, 0, 0, -65445, 0, 0, 91, 0, 0, 65627, 0, 0, 131163, 0, 0, -65450, 2, 0, -65447, 2, 0, 65623, 2, 0, 65624, 2, 0, -65444, 0, 0, -65443, 0, 0, -65442, 0, 0, 65628, 0, 0, 65629, 0, 0, 65630, 0, 0, -65453, 0, 0, -65454, 0, 0, -65455, 0, 0, 65619, 0, 0, 65618, 0, 0, 65617, 0, 0, 131175, 0, 0, 65640, 0, 0, 105, 0, 0, -65430, 0, 0, -130965, 0, 0, -196500, 0, 0, -262035, 0, 0, -327570, 0, 0, -393105, 0, 0, -327569, 0, 0, -262033, 0, 0, -196497, 0, 0, -130961, 0, 0, -65425, 0, 0, 111, 0, 0, 65647, 0, 0, 131183, 0, 0, 131203, 0, 0, 65667, 0, 0, 131, 0, 0, -65405, 0, 0, -130941, 0, 0, -196477, 0, 0, -262013, 0, 0, -327549, 0, 0, -393085, 0, 0, -327548, 0, 0, -262011, 0, 0, -196474, 0, 0, -130937, 0, 0, -65400, 0, 0, 137, 0, 0, 65674, 0, 0, 131211, 0, 0, -261959, 0, 0, -327495, 0, 0, -393031, 0, 0, -458567, 0, 0, -524103, 0, 0, -589639, 0, 0, -655175, 0, 0, -720711, 0, 0, -786247, 0, 0, -851783, 0, 0, -917319, 0, 0, -982855, 0, 0, -1048391, 0, 0, -1113927, 0, 0, -1179463, 0, 0, -1244999, 0, 0, -1310535, 0, 0, -1048425, 0, 0, -1048424, 0, 0, -1113960, 0, 0, -1113959, 0, 0, -1113958, 0, 0, -1048423, 0, 0, -1048422, 0, 0, -1113957, 0, 0, -1113956, 0, 0, -1048421, 0, 0, -1048420, 0, 0, -1048419, 0, 0, -1048418, 0, 0, -1048417, 0, 0, -1048416, 0, 0, -1048415, 0, 0, -1048414, 0, 0, -1048413, 0, 0, -1048412, 0, 0, -1048411, 0, 0, -1048410, 0, 0, -1048409, 0, 0, -1048408, 0, 0, -1048407, 0, 0, -1048406, 0, 0, -1048405, 0, 0, -1048404, 0, 0, -1048403, 0, 0, -1048402, 0, 0, -1048401, 0, 0, -1048400, 0, 0, -1048399, 0, 0, -1048398, 0, 0, -1048397, 0, 0, -1048396, 0, 0, -1048395, 0, 0, -1048394, 0, 0, -1048393, 0, 0, -1048392, 0, 0, 174, 0, 0, -65362, 0, 0, -130898, 0, 0, -196434, 0, 0, -261970, 0, 0, -327506, 0, 0, -393042, 0, 0, -458578, 0, 0, -458579, 0, 0, -458580, 0, 0, -393046, 0, 0, -393045, 0, 0, -327511, 0, 0, -327512, 0, 0, -261974, 0, 0, -261973, 0, 0, -196436, 0, 0, -196435, 0, 0, -261972, 0, 0, -327508, 0, 0, -327507, 0, 0, -261971, 0, 0, -393043, 0, 0, -393044, 0, 0, -327510, 0, 0, -327509, 0, 0, -131007, 0, 0, -131005, 0, 0, 196606, 2, 0, 262072, 1, 0, 262071, 1, 0, 262070, 1, 0, 262069, 1, 0, 262068, 1, 0, 262067, 1, 0, 262066, 1, 0, 262065, 0, 0, 262064, 1, 0, 262063, 1, 0, 262062, 1, 0, 262061, 1, 0, 262060, 1, 0, 262059, 1, 0, 262058, 1, 0, 262057, 1, 0, 262056, 1, 0, 262055, 1, 0, 262054, 1, 0, 262053, 1, 0, 262052, 1, 0, 262051, 1, 0, 262050, 1, 0, 262049, 1, 0, 262048, 1, 0, 262047, 1, 0, 262046, 1, 0, 262045, 1, 0, 262044, 1, 0, 262043, 1, 0, 262042, 1, 0, 262041, 1, 0, 262040, 1, 0, 262039, 1, 0, 262038, 1, 0, 262037, 1, 0, 262036, 1, 0, 262035, 1, 0, 262034, 1, 0, 262033, 1, 0, 262032, 1, 0, 262031, 1, 0, 262078, 1, 0, 262077, 1, 0, 262076, 1, 0, 262075, 1, 0, 262074, 1, 0, 262073, 1, 0, 262030, 1, 0, 196794, 0, 0, 196795, 0, 0, 196796, 0, 0, 196797, 0, 0, 196798, 0, 0, 196799, 0, 0, 196800, 0, 0, 196801, 0, 0, 196802, 0, 0, 196803, 0, 0, 196804, 0, 0, 196805, 0, 0, 196806, 0, 0, 196807, 0, 0, 196808, 0, 0, 196809, 0, 0, 196810, 0, 0, 196811, 0, 0, 196812, 0, 0, 196813, 0, 0, 196814, 0, 0, 196815, 0, 0, 196816, 0, 0, 196817, 0, 0, 196818, 0, 0, 196819, 0, 0, 196820, 0, 0, 196821, 0, 0, 196822, 0, 0, 196823, 0, 0, 196824, 0, 0, 196825, 0, 0, 196826, 0, 0, 196827, 0, 0, 196828, 0, 0, 196829, 0, 0, 196830, 0, 0, 196831, 0, 0, 196832, 0, 0, 196833, 0, 0, 196834, 0, 0, 196835, 0, 0, 196836, 0, 0, 196837, 0, 0, 196838, 0, 0, 196839, 0, 0, 196840, 0, 0, 196841, 0, 0, 196842, 0, 0, 196843, 0, 0, 196844, 0, 0, 196845, 0, 0, 196846, 0, 0, 131310, 0, 0, 65774, 0, 0, 238, 0, 0, -65298, 0, 0, -130834, 0, 0, -196370, 0, 0, -261906, 0, 0, -327442, 0, 0, -392978, 0, 0, -458514, 0, 0, -524050, 0, 0, -589586, 0, 0, -655122, 0, 0, -720658, 0, 0, -786194, 0, 0, -851730, 0, 0, -917266, 0, 0, -982802, 0, 0, -1048338, 0, 0, -1113874, 0, 0, -1179410, 0, 0, -1244946, 0, 0, -1310482, 0, 0, -1376018, 0, 0, -1441554, 0, 0, -1507090, 0, 0, -1572626, 0, 0, -1638162, 0, 0, -1703698, 0, 0, -1769234, 0, 0, -1834770, 0, 0, 214, 0, 0, 215, 0, 0, -130861, 0, 0, -130862, 0, 0, -261938, 0, 0, -261937, 0, 0, -130869, 0, 0, -130870, 0, 0, 199, 0, 0, 198, 0, 0)
layer_1/name = "Layer1"

[node name="Label" type="Label" parent="TileMap"]
offset_left = 1959.0
offset_top = 60.0
offset_right = 2343.0
offset_bottom = 109.0
text = "Все так ненавидели эту секцию, вот вам дырка
"
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="StaticBody2D/Area2D" to="StaticBody2D/Area2D" method="_on_body_entered"]
[connection signal="area_exited" from="enemy/DetectionArea" to="enemy" method="_on_detection_area_area_exited"]
[connection signal="body_entered" from="enemy/DetectionArea" to="enemy" method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="enemy/DetectionArea" to="enemy" method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy/AttackArea" to="enemy" method="_on_attack_area_body_entered"]
[connection signal="body_entered" from="TRIGGER2" to="TRIGGER2" method="_on_body_entered"]
[connection signal="body_entered" from="TRIGGER" to="TRIGGER" method="_on_body_entered"]
[connection signal="body_entered" from="TRIGGER3" to="TRIGGER3" method="_on_body_entered"]
[connection signal="body_entered" from="TRIGGER4" to="TRIGGER4" method="_on_body_entered"]
[connection signal="body_entered" from="TRIGGER5" to="TRIGGER5" method="_on_body_entered"]
[connection signal="body_entered" from="TRIGGER6" to="TRIGGER6" method="_on_body_entered"]
